--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Displaying Distributions</title>
   </head>
   <body>
-    <h1>Visualizing Distributions</h1>
+    <h1>Displaying Distributions</h1>
     
         <p>Cairo uses the term, "Distribution" to refer to all of the values of a data set together which is typically shown by a graph. Other things that Cairo discussed in the chapter was the 4 elemts of a distribution that help descibe the data:
             <br>
